<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_registro"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCrear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="68dp"
                android:backgroundTint="#47525E"
                android:text="@string/crear_cuenta"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/edt_passwordR"
                app:layout_constraintTop_toBottomOf="@+id/edt_passwordR" />

            <Button
                android:id="@+id/btnAbrirGaleria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:backgroundTint="#47525E"
                android:text="@string/abrir_galeria"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@+id/edt_passwordR"
                app:layout_constraintHorizontal_bias="0.136"
                app:layout_constraintStart_toEndOf="@+id/btnCrear"
                app:layout_constraintTop_toBottomOf="@+id/edt_passwordR" />

            <EditText
                android:id="@+id/edt_dui"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/dui"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/edt_codEmpleado"
                app:layout_constraintStart_toStartOf="@+id/edt_codEmpleado"
                app:layout_constraintTop_toBottomOf="@+id/edt_codEmpleado" />

            <EditText
                android:id="@+id/edt_fechaNac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/fecha_nacimiento"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="@+id/edt_dui"
                app:layout_constraintStart_toStartOf="@+id/edt_dui"
                app:layout_constraintTop_toBottomOf="@+id/edt_dui" />

            <EditText
                android:id="@+id/edt_cargo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/cargo_en_la_empresa"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/edt_fechaNac"
                app:layout_constraintStart_toStartOf="@+id/edt_fechaNac"
                app:layout_constraintTop_toBottomOf="@+id/edt_fechaNac" />

            <EditText
                android:id="@+id/edt_correoR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/edt_cargo"
                app:layout_constraintStart_toStartOf="@+id/edt_cargo"
                app:layout_constraintTop_toBottomOf="@+id/edt_cargo" />

            <EditText
                android:id="@+id/edt_passwordR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/edt_correoR"
                app:layout_constraintStart_toStartOf="@+id/edt_correoR"
                app:layout_constraintTop_toBottomOf="@+id/edt_correoR" />

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="8dp"

                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="nombre"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_codEmpleado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/codigo_empleado"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/edtNombre"
                app:layout_constraintStart_toStartOf="@+id/edtNombre"
                app:layout_constraintTop_toBottomOf="@+id/edtNombre" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>