<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

<!--    <include android:id="@+id/appbar"-->
<!--        layout="@layout/toolbar_admin" />-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <ImageView
            android:src="@drawable/logo"
            android:layout_gravity="left"
            android:layout_width="75dp"
            android:layout_height="50dp" />

        <Button
            android:layout_margin="5dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnToolbarRegistro"
            android:text="@string/registrar"
            android:drawableLeft="@drawable/ic_person_add_white_24dp"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            />
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/loginButton"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/edt_passwordR"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/edt_passwordR"
            android:background="@drawable/boton_redondo"
            app:layout_constraintTop_toBottomOf="@+id/edt_passwordR" />

        <EditText
            android:id="@+id/edt_passwordR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/edt_correoR"
            app:layout_constraintStart_toStartOf="@+id/edt_correoR"
            app:layout_constraintTop_toBottomOf="@+id/edt_correoR" />

        <EditText
            android:id="@+id/edt_correoR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/correo"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.096" />

        <Button
            android:id="@+id/btnLoginWithFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="#3b5998"
            android:drawableLeft="@drawable/social_facebook"
            android:text="@string/facebook"
            android:textColor="@android:color/white"
            android:background="@drawable/boton_redondo"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btnLoginWithTwitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/social_twitter_icon"
            android:text="@string/twitter"
            app:layout_constraintEnd_toEndOf="@+id/btnLoginWithFacebook"
            app:layout_constraintStart_toStartOf="@+id/btnLoginWithFacebook"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginWithFacebook"
            android:backgroundTint="#00acee"
            android:background="@drawable/boton_redondo"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnLoginWithGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/social_google_plus_icon"
            android:text="@string/google"
            app:layout_constraintEnd_toEndOf="@+id/btnLoginWithTwitter"
            app:layout_constraintStart_toStartOf="@+id/btnLoginWithTwitter"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginWithTwitter"
            android:backgroundTint="#db4a39"
            android:background="@drawable/boton_redondo"
            android:textColor="@android:color/white"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintBottom_toTopOf="@+id/btnLoginWithFacebook"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>